# civiclens

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: branch.md
.github/workflows/: ci.yml
docs/plans/: civiclens-app-design.md  civiclens-app-fable-prompt.md  dbt-staging-models.md  ingestion-sources-phase1.md  pyproject-setup.md  readme-setup.md  snowflake-loader.md
docs/sources/: api-key-checklist.md  census.md  congress-api.md  fec.md  followthemoney.md  gdelt.md  ny_boe_campaign_finance.md  opensecrets-bulk.md  openstates.md  source-inventory.md  votesmart.md
src/api/: db.py  main.py
src/api/migrations/: 001_create_bill_summaries.sql
src/app/: api_client.py  app.py
src/app/views/: bill_card.py  bills.py  find_candidates.py  find_members.py  member_profile.py  profile.py
src/connectors/: __init__.py  base.py  census.py  congress_api.py  fec.py  ny_boe.py  nyc_cfb.py  openstates.py  snowflake_client.py  snowflake_loader.py
src/dbt/: dbt_project.yml
src/dbt/macros/: generate_schema_name.sql  keys.sql
src/dbt/models/marts/: _marts.yml  dim_bills.sql  dim_candidates.sql  dim_committees.sql  dim_districts.sql  dim_legislators.sql  dim_members.sql  fct_bill_sponsorships.sql  (+6 more)
src/dbt/seeds/: _seeds.yml  congressional_committee_industry_map.csv  state_abbreviations.csv
src/orchestration/: backfill.py
tests/api/: test_main.py
tests/app/: test_views.py
tests/connectors/: test_base.py  test_census.py  test_congress_api.py  test_fec.py  test_ny_boe.py  test_nyc_cfb.py  test_openstates.py  test_snowflake_loader.py
(+21 files in other folders)
