[project]
name = "civiclens"
version = "0.1.0"
description = "Full-stack civic data pipeline — ingestion to ML-powered dashboard"
requires-python = ">=3.12"

dependencies = [
    "requests>=2.32",
    "pyarrow>=16.0",
    "python-dotenv>=1.0",
    "tenacity>=9.0",
    "pandas>=2.2",
    "snowflake-connector-python>=3.10",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "anthropic>=0.28",
    "streamlit>=1.36",
    "prefect>=2.19",
    "dbt-snowflake>=1.8",
    "scikit-learn>=1.5",
    "textblob>=0.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
